refactor: Improve error handling and readability in TournamentService and update ResultControllerTest and ResultServiceTest for better clarity and structure